# wechat-opencode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.yaml  diagnose_capture.py  gen_docs.py  pyproject.toml  requirements.txt  start.bat  start_dryrun.bat  wechat-opencode-功能文档.md
1/: 2025年度工作汇报.pptx  make_ppt.py
scripts/: check_service.ps1  install_service.ps1  run_dev.ps1  run_tests.ps1  setup.ps1  uninstall_service.ps1
tests/: conftest.py  test_bridge.py  test_config.py  test_core.py  test_formatter.py  test_health.py  test_queue.py  test_router.py  test_session.py  test_shutdown.py  test_task_tracker.py  test_types.py
wechat_opencode/: __init__.py  __main__.py  auto_reload.py  bridge.py  bus.py  config.py  context.py  core.py  cost_tracker.py  exceptions.py  feishu_bot.py  file_transfer.py  formatter.py  git_diff.py  health.py  intent_router.py  permission.py  ppt_designer.py  queue.py  router.py  scheduler.py  screenshot.py  session.py  setup_wizard.py  shutdown.py  task_tracker.py  types.py  undo.py  web_ui.py  window_manager.py  worker.py
wechat_opencode/commands/: __init__.py  base.py  file.py  help.py  model.py  plan.py  ppt.py  screen.py  session.py  status.py  system.py  task.py  undo.py  window.py
